# cmdp

./: .cmdp.toml  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
examples/: archive.toml  commands.toml  disc.toml  file.toml  flatpak.toml  git.toml  package.dnf.toml  rust.toml  search.toml  settings.toml  size.toml  systemd.toml
scripts/: check-release-local.sh
src/: app.rs  atomic.rs  config.rs  error.rs  event.rs  i18n.rs  main.rs  output.rs  parser.rs  preview.rs  renderer.rs  state.rs  template.rs  terminal_session.rs  ui.rs
