[package]
name = "cmdp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cmdp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
crossterm = "0.27"
directories = "5.0"
indexmap = { version = "2.2", features = ["serde"] }
ratatui = "0.26"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml = { version = "0.8", features = ["preserve_order"] }
