[package]
name = "cmdp"
version = "0.2.1"
edition = "2024"

[[bin]]
name = "cmdp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
crossterm = "0.29"
directories = "6.0"
indexmap = { version = "2.2", features = ["serde"] }
ratatui = "0.30"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
toml = { version = "1.0", features = ["preserve_order"] }
